# joebot2

./: .gitignore  README.md  index.html  joebot.cabal  license.txt
Core/: Config.html  Core-Cmds.html  Core-Connect.html  Core-Eval.html  Core-Parse.html  Core-Types.html  Core.html  Joebot-Core-Cmds.html  Joebot-Core-Connect.html  Joebot-Core-Eval.html  Joebot-Core-Parse.html  Joebot-Core-Types.html  Joebot-Core.html  PluginUtils.html  doc-index.html  index-frames.html  index.html  joebot2.haddock  mini_Config.html  mini_Core-Cmds.html  mini_Core-Connect.html  mini_Core-Eval.html  mini_Core-Parse.html  mini_Core-Types.html  mini_Core.html  mini_Joebot-Core-Cmds.html  mini_Joebot-Core-Connect.html  mini_Joebot-Core-Eval.html  mini_Joebot-Core-Parse.html  mini_Joebot-Core-Types.html  mini_Joebot-Core.html  mini_PluginUtils.html
Plugins/: Roll.html
assets/css/: main.css
src/: Config.hs  Core.hs  Main.hs  PluginUtils.hs
src/Core/: Cmds.hs  Connect.hs  Eval.hs  Parse.hs  Types.hs
src/Dice/: Base.hs
src/Joebot/: Core.hs
src/Joebot/Core/: Cmds.hs  Connect.hs  Eval.hs  Parse.hs  Tests.hs  Types.hs
src/Joebot/Plugins/: Prelude.hs  SaveTimer.hs  Utils.hs
src/Joebot/Plugins/Dice/: Roll.hs
src/Joebot/Plugins/Mail/: Base.hs  Cmd.hs  Cmds.hs
src/Joebot/Plugins/Steam/: Cmds.hs  Core.hs  Types.hs  Util.hs
src/Mail/: Base.hs  Cmd.hs
src/Plugins/Dice/: Base.hs  Roll.hs
src/Plugins/Mail/: Base.hs  Cmd.hs
src/Plugins/Steam/: Cmds.hs  Core.hs  Types.hs  Util.hs
