Name: joebot2
Version: 1.2
Synopsis: Fully customizable haskell IRC bot
Author: Joseph Lee
Maintainer: josephle@andrew.cmu.edu
Category: Development
Build-type: Simple
License: MIT
License-File: license.txt
Cabal-version: >= 1.2

Library
  Hs-Source-Dirs: src
  exposed-modules: Joebot.Core.Types, Joebot.Core.Cmds, Joebot.Core.Eval, Joebot.Core.Parse,
                   Joebot.Core.Connect, PluginUtils, Config

Executable joe_bot
  Main-Is: Main.hs
  Hs-Source-Dirs: src
  Build-Depends: base, text, bytestring, http-conduit, network,
                 containers, hashmap, vector, mtl, aeson, lens,
                 attoparsec, random
  Extensions: OverloadedStrings, TemplateHaskell
